@@ -7,6 +7,8 @@ New in 6.0 version:
     (Ivan Carnimeo)
   * Improved real-space treatment of Q and beta functions with Fourier
     filtering (Stefano de Gironcoli)
+  * Support for new, improved Goedecker-Hutter-Teter pseudopotentials
+    generated by Santana Saha (Sebastiano Caravati)
 
 Fixed in 6.0 version:
 
